force-app/main/default/objects/Employment_Detail__c/Employment_Detail__c.object-meta.xml
<CustomObject>
    <label>Employment Detail</label>
    <nameField>
        <displayFormat>EID-{0000}</displayFormat>
        <label>Employment Detail Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>