force-app/main/default/objects/Employment_Detail__c/fields/Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Caregiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caregiver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employment Details</relationshipLabel>
    <relationshipName>Employment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>