force-app/main/default/objects/Employment_Detail__c/fields/Date_of_Employment_From__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Employment_From__c</fullName>
    <label>Date of Employment (From)</label>
    <type>Date</type>
</CustomField>