force-app/main/default/objects/Employment_Detail__c/fields/Date_of_Employment_To__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Employment_To__c</fullName>
    <label>Date of Employment (To)</label>
    <type>Date</type>
</CustomField>