force-app/main/default/objects/Employment_Detail__c/fields/Hours_worked_per_week__c.field-meta.xml
<CustomField>
    <fullName>Hours_worked_per_week__c</fullName>
    <label>Hours Worked Per Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>