force-app/main/default/objects/Employment_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employer_Name__c</columns>
    <columns>Caregiver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>